css/style.css
/* Reset */
*,
*:after,
*:before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* General Styles */
#wrapper {
  max-width: 640px;
}

p {
  font-family: 'Lato';
  font-size: 18px;
  font-weight: 200;
  margin-bottom: 20px;
  padding: 30px;
  text-align: justify;

}

img {
  max-width: 100%;
}

footer {
  text-align: center;
  max-width: 640px;
}

a {
  color: #000000;
  font-size: 36px;
  margin: 0 25px;
}

a:hover {
  color: #fe635f;
}


@media only screen and (max-width: 40em) {
  a {
    color: #fe635f;
    font-size: 28px;
    margin: 0 15px;
  }
}

